rearranging AWA section

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1596,6 +1596,19 @@ author =       "W. Hackbusch",
 	author={GAI, W. and POWER, J. G. and JING, C.}, year={2012}, pages={339–345}
 }
 
+@article{JING201872,
+	title = "Electron acceleration through two successive electron beam driven wakefield acceleration stages",
+	journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+	volume = "898",
+	pages = "72 - 76",
+	year = "2018",
+	issn = "0168-9002",
+	doi = "https://doi.org/10.1016/j.nima.2018.05.007",
+	url = "http://www.sciencedirect.com/science/article/pii/S0168900218305928",
+	author = "C. Jing and S. Antipov and M. Conde and W. Gai and G. Ha and W. Liu and N. Neveu and J.G. Power and J. Qiu and J. Shi and D. Wang and E. Wisniewski",
+	keywords = "Wakefield acceleration, Staging, Two beam acceleration, High gradient"
+}
+
 
 
 
