--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -423,26 +423,36 @@ Both trackers agree within acceptable limits \cite{chao:99}.
   %design variables are narrow enough (iteratively diminishing search space). 
 %\vspace{-7em}
 \subsection{AWA Photoinjector Optimization} \label{awaproblem}
-Next we apply the optimization framework to the high charge beam line at the AWA. 
-The purpose of the Argonne Wakefield Accelerator (AWA) optimization is to produce beams of electrons meeting 
-design specifications including number of particles (charge), energy, and particle distribution (characterized by transverse beam sizes and energy spread).
-As shown in Fig.  \ref{awa-pic}, this beam line consists of an rf photocathode gun, 
-two solenoids, six linear accelerating cavities, 
+Next we apply the optimization framework to a high charge beam line
+ at the Argonne Wakefield Accelerator (AWA) facility. 
+The goal of this optimization is to produce beams of electrons that meet 
+design specifications; this includes number of particles (charge), energy, and particle distribution (characterized by beam sizes and energy spread).
+As shown in Fig.~\ref{awa-linac}, the installed portion of the the 
+beam line consists of an rf photocathode gun, 
+two solenoids, and six linear accelerating cavities
 followed by four quadrupoles and a stripline kicker. 
 The charge of interest, 40 nC, is needed for Two Beam 
-Acceleration (TBA) \cite{gai_power_jing_2012} experiments performed in the past 
-at AWA. Similar experiments will take place in the future and motivate this work. 
+Acceleration (TBA) \cite{gai_power_jing_2012,JING201872} 
+experiments performed at AWA, which motivates this work. 
 Prior experimental results were limited by beam size as the beam passed through small aperture 
-wakefield structures located after the quadrupoles. 
+wakefield structures located downstream. 
 In an attempt to maximize charge transmission in upcoming experiments
-we optimize several parameters in the gun and quadrupoles leading into the 
-TBA section of the beam line.
+we optimize magnet strengths in the gun and quadrupoles leading into the 
+TBA section of the beam line, shown in Fig.~\ref{awa-tba}.
+The simulation model includes the linac, kicker, and septum. 
+The optimization location is chosen as the entrance to the fifth quadrupole, $s_3$, on the dog leg.
+Minimizing beam sizes here will enable capture and further focus with quadrupoles five and six before space charge effects dominate the beam. 
+This will also enable cleaner transport through downstream elements.
 %\vspace{-1em}
 
 \begin{figure}
 	\begin{tikzpicture}[every node/.style={anchor=south west,inner sep=0pt},x=1mm, y=1mm,]   
 	\node (fig1) at (0,0)
 	{\includegraphics[width=\textwidth]{Report/awa-drawing}};
+	\node[fill=white, inner sep=2pt] (txt2) at (0,20) {Gun};
+	\node[fill=white, inner sep=2pt] (txt2) at (20,20) {Accelerating Cavities};
+	\node[fill=white, inner sep=2pt] (txt2) at (88,28) {Quadrupoles};
+	\draw [blue, ->, line width=1] (99,28) -- (99, 21);
 	\node[fill=white, inner sep=2pt] (txt2) at (125,10) {$s_2$};
 	\node[fill=white, inner sep=2pt] (txt2) at (112,8) {$s_1$};
 	\node[fill=white, inner sep=2pt] (txt2) at (115,30) {Kicker};
@@ -469,144 +479,24 @@ TBA section of the beam line.
 		This is the proposed two beam acceleration section.}
 	\label{awa-tba}
 \end{figure}
-
+%
 %\vspace{-1em}
 In addition to the physics challenges, we chose this model to demonstrate the ability of the framework to tackle large problems.
-Six design variables and objectives were used, 
-along with three constraints.
-The objectives include transverse and longitudinal beam size, 
-transverse momentum and longitudinal energy spread. 
+Six design variables and objectives were used, along with three constraints.
+The objectives include transverse and longitudinal beam sizes, 
+transverse momentum, and longitudinal energy spread. 
 The design variables include the two gun solenoids and 
 the first four quadrupoles. The objectives are calculated at 
-$s_1=19.4$~[m], at the entrance of the fifth quadrupole in Fig.~\ref{awa-pic}.  
+$s_3=19.4$~[m], at the entrance of the fifth quadrupole in Fig.~\ref{awa-tba}.  
 This problem encompasses high dimensionality 
 and nonlinear effects such as space charge. There is no existing information
 that accurately predicts where the Pareto front will fall. This work is also meaningful in that
 it will guide future operations at the AWA.
-\nrnote{Maybe eqs 5.10-5.21 and code example should move after time step scan and hyper parameters}
+\nrnote{Moved final run set up and results to after time step scan and hyper parameters}
 
-\begin{align}
-\text{min}  \quad & \text{rms}_{x}\left(s = s_3\right), \quad \text{rms}_{y}\left(s = s_3\right) \label{eq:awa:p1}\\
-& \text{rms}_{px}\left(s = s_3\right), \quad \text{rms}_{py}\left(s = s_3\right), \label{eq:awa:p2}\\
-& \text{rms}_{s}\left(s = s_3\right), \quad dE \label{eq:awa:p4} \\
-\text{subject to} \quad & rms_x(s=s_1) < 0.1 \, [m]\label{eq:awa:c1}\\
-\quad & rms_y(s=s_1) < 0.1\, [m]\label{eq:awa:c2}\\
-\quad & |rms_y(s=s_1) - rms_x(s=s_1) | < 0.005 \, [m]\label{eq:awa:c3}\\
-\quad & q = 40 \left[\text{nC}\right] \label{eq:awa:firstconstr}\\
-\quad & \text{Volt}_{\text{Gun}} = 64\left[\text{MV/m}\right] \label{eq:awa:lastconstr}\\
-\quad & \text{Volt}_{\text{Linac}} = 24-25\left[\text{MV/m}\right] \\
-\quad & R_x = R_y = 9 \left[\text{mm}\right] \label{eq:awa:firstdvar}\\
-\quad & \phi_{\text{gun}} =-20^\circ \label{eq:awa:gphidvar}\\
-\quad & \phi_{\text{linac}} =-20^\circ \label{eq:awa:lastdvar}
-\end{align}
-
-The first four objectives, Eqs. (\ref{eq:awa:p1}) to (\ref{eq:awa:p2}),
-minimize the transverse ($rms_{x,y}$) beam size and transverse momentum ($rms_{px,py}$)
-at the location of interest in the beam line ($s_1$).
-Where $s_1$ is the longitudinal entrance of the fifth quadrupole. 
-Minimizing the beam size at this location is essential to 
-to preventing loss of particles by scraping.
-Preventing scraping ensures better transmission through the wakefield structures downstream. 
-Less divergence in the beam (lower transverse momentum) 
-reduces growth of transverse beam size during transport in bending elements, 
-which also helps with transmission downstream. 
-The next two objectives (\ref{eq:awa:p2}) minimize the 
-longitudinal beam size ($rms_s$), and energy spread (dE) at $s_1$.
-This helps reduce longitudinal beam size growth in bending elements.  
-
-Three constraints were also defined to help guide the algorithm;
-Eqs.~\ref{eq:awa:c1} to \ref{eq:awa:c3}.
-The bounding values may seem large, but this is done to avoid over constraing the 
-problem in early generations. If the constraints are set tighter, 
-runs do not reach the second generation, because enough satisfactory 
-points are not produced to fill a complete generation. 
-Leaving the value large allows for enough simulations to finish
-in order to reach the next generation, and subsequent improved points in later generations.
-The difference constraint, Eq.~\ref{eq:awa:c3}, is used to favor nearly round beams.
-This prevents one dimension from becoming disproportionately large compared to the other.
-In this case, there is some room in the beam pipe to allow the y dimension to grow, but round beams 
-are preferred for easier data analysis.
-
-Equations (\ref{eq:awa:firstconstr}) to
-(\ref{eq:awa:lastdvar}) define the charge, gun voltage, linac voltages, 
-laser radius, gun phase, and linac cavity phases (in that order). 
-These are parameters in the simulation 
-that must be defined, but do not vary during the optimization.
-%\vspace{-1em}
-As introduced in Section \ref{ferrario}, we define the AWA optimization 
-design variables, objectives, and constraints in the OPAL input file as shown in
-the following code: %equations (\ref{eq:awa:p1}) to (\ref{eq:awa:lastdvar}). 
-
-\vspace{0.2cm}
-{\footnotesize \begin{verbatim}
-	
-	// Gun variables 
-	dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=300.0, UPPERBOUND=500.0;
-	dv1: DVAR, VARIABLE="IM",     LOWERBOUND=180.0, UPPERBOUND=280.0;
-	
-	// Quad variables 
-	dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv5: DVAR, VARIABLE="KQ2", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv6: DVAR, VARIABLE="KQ3", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv7: DVAR, VARIABLE="KQ4", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	
-	//Objectives
-	de3: OBJECTIVE,EXPR="fabs(statVariableAt('dE',19.4))";
-	rmss3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',19.4))";
-	rmsx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_x',19.4))";
-	rmsy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_y',19.4))";
-	rmspx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_px',19.4))";
-	rmspy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_py',19.4))";
-	
-	//Kicker apeture
-	c1: CONSTRAINT, EXPR="fabs(statVariableAt('rms_x',16.5))<0.1";
-	c2: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5))<0.1";
-	c3: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5)-statVariableAt('rms_x',16.5))<0.005";
-	
-	OPTIMIZE, INPUT="tmpl/optLinac-40nC.tmpl",
-	OUTPUT="optLinac-40nC",
-	OUTDIR="results",
-	OBJECTIVES = {rmss3, rmsx3, rmsy3, rmspx3, rmspy3, de3},
-	DVARS = {dv0, dv1, dv4, dv5, dv6, dv7},
-	CONSTRAINTS = {c1, c2, c3},
-	INITIALPOPULATION=656,
-	MAXGENERATIONS=200,
-	NUM_MASTERS=1,
-	NUM_COWORKERS=8,
-	SIMTMPDIR="tmp",
-	TEMPLATEDIR="tmpl",
-	FIELDMAPDIR="fieldmaps",
-	NUM_IND_GEN=328,
-	GENE_MUTATION_PROBABILITY=0.01,
-	MUTATION_PROBABILITY=0.01,
-	RECOMBINATION_PROBABILITY=0.09;
-	QUIT;
-	
-	\end{verbatim}}
-\vspace{0.2cm}
-
-Design variables include the currents in two gun solenoids (IBF and IM), 
-and four quadrupole strengths (KQ1-KQ2). The objectives include
-beam size (transverse and longitudinal), transverse momentum, and energy spread as
-defined in Eqs. (\ref{eq:awa:p1}) to (\ref{eq:awa:p4}). 
-The location at the entrance of the kicker is $s_0=16.45$~meters, 
-and the location of interest for objectives is $s_1=19.4$~meters. 
-
-All simulations for this experiment were carried out on Bebop a
-high performance computing (HPC)
-cluster provided by the Laboratory Computing Resource Center (LCRC)
-at Argonne National Laboratory (ANL). We used Intel Knights Landing 
-(KNL) processors at 1.3 GHz with 128 GB of memory 
-and 64 cores per node. There are 352 compute nodes available on 
-Bebop, with a total of 22,528 cores. All jobs were run and compared 
-on 8 cores each, which allowed 8 jobs per node on the KNLs.
-This in combination with the number of nodes available 
-allows for very large optimization jobs, like the AWA case.
-Typical runs for this paper used 41 nodes, which corresponds to 2624 KNL cores 
-and a generation size of 328 individuals.
-
-
-
+\subsection{Tests}
+Before running a full scale optimization of the problem described in \ref{awaproblem}, 
+several computational settings, and 
 \subsubsection{Time Step Scan} \label{awa:subsection:test}
 A study on time step and 
 number of particles was done to reduce the time to simulation while 
@@ -754,18 +644,143 @@ the hyper parameters in ex-4 were chosen as the default values for subsequent ru
 		\label{expareto1}
 	\end{subfigure}
 	\begin{subfigure}{0.49\textwidth}
-	\centering
-	\includegraphics[width=\textwidth]{Report/ex-pareto2}
-	\caption{Pareto fronts at $s_2$.}
-	\label{expareto2}
+		\centering
+		\includegraphics[width=\textwidth]{Report/ex-pareto2}
+		\caption{Pareto fronts at $s_2$.}
+		\label{expareto2}
 	\end{subfigure}
 	\caption{Comparison of Pareto fronts for initial optimization experiments.}
 	\label{expareto}
 \end{figure}
- 
+
+
+
+
+
+\subsubsection{AWA Optimization Problem}
+\begin{align}
+\text{min}  \quad & \text{rms}_{x}\left(s = s_3\right), \quad \text{rms}_{y}\left(s = s_3\right) \label{eq:awa:p1}\\
+& \text{rms}_{px}\left(s = s_3\right), \quad \text{rms}_{py}\left(s = s_3\right), \label{eq:awa:p2}\\
+& \text{rms}_{s}\left(s = s_3\right), \quad dE \label{eq:awa:p4} \\
+\text{subject to} \quad & rms_x(s=s_1) < 0.1 \, [m]\label{eq:awa:c1}\\
+\quad & rms_y(s=s_1) < 0.1\, [m]\label{eq:awa:c2}\\
+\quad & |rms_y(s=s_1) - rms_x(s=s_1) | < 0.005 \, [m]\label{eq:awa:c3}\\
+\quad & q = 40 \left[\text{nC}\right] \label{eq:awa:firstconstr}\\
+\quad & \text{Volt}_{\text{Gun}} = 64\left[\text{MV/m}\right] \label{eq:awa:lastconstr}\\
+\quad & \text{Volt}_{\text{Linac}} = 24-25\left[\text{MV/m}\right] \\
+\quad & R_x = R_y = 9 \left[\text{mm}\right] \label{eq:awa:firstdvar}\\
+\quad & \phi_{\text{gun}} =-20^\circ \label{eq:awa:gphidvar}\\
+\quad & \phi_{\text{linac}} =-20^\circ \label{eq:awa:lastdvar}
+\end{align}
+
+The first four objectives, Eqs. (\ref{eq:awa:p1}) to (\ref{eq:awa:p2}),
+minimize the transverse ($rms_{x,y}$) beam size and transverse momentum ($rms_{px,py}$)
+at the location of interest in the beam line ($s_3$).
+%Where $s_3$ is the longitudinal entrance of the fifth quadrupole. 
+Minimizing the beam size at this location is essential to 
+to preventing loss of particles by scraping.
+Preventing scraping ensures better transmission through the wakefield structures downstream. 
+Less divergence in the beam (lower transverse momentum) 
+reduces growth of transverse beam size during transport in bending elements, 
+which also helps with transmission downstream. 
+The next two objectives (\ref{eq:awa:p2}) minimize the 
+longitudinal beam size ($rms_s$), and energy spread (dE) at $s_1$.
+This helps reduce longitudinal beam size growth in bending elements.  
+
+Three constraints were also defined to help guide the algorithm;
+Eqs.~\ref{eq:awa:c1} to \ref{eq:awa:c3}.
+The bounding values may seem large, but this is done to avoid over constraing the 
+problem in early generations. If the constraints are set tighter, 
+runs do not reach the second generation, because enough satisfactory 
+points are not produced to fill a complete generation. 
+Leaving the value large allows for enough simulations to finish
+in order to reach the next generation, and subsequent improved points in later generations.
+The difference constraint, Eq.~\ref{eq:awa:c3}, is used to favor nearly round beams.
+This prevents one dimension from becoming disproportionately large compared to the other.
+In this case, there is some room in the beam pipe to allow the y dimension to grow, but round beams 
+are preferred for easier data analysis.
+
+Equations (\ref{eq:awa:firstconstr}) to
+(\ref{eq:awa:lastdvar}) define the charge, gun voltage, linac voltages, 
+laser radius, gun phase, and linac cavity phases (in that order). 
+These are parameters in the simulation 
+that must be defined, but do not vary during the optimization.
+%\vspace{-1em}
+As introduced in Section \ref{ferrario}, we define the AWA optimization 
+design variables, objectives, and constraints in the OPAL input file as shown in
+the following code: %equations (\ref{eq:awa:p1}) to (\ref{eq:awa:lastdvar}). 
+
+\vspace{0.2cm}
+{\footnotesize \begin{verbatim}
+	
+	// Gun variables 
+	dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=300.0, UPPERBOUND=500.0;
+	dv1: DVAR, VARIABLE="IM",     LOWERBOUND=180.0, UPPERBOUND=280.0;
+	
+	// Quad variables 
+	dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+	dv5: DVAR, VARIABLE="KQ2", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+	dv6: DVAR, VARIABLE="KQ3", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+	dv7: DVAR, VARIABLE="KQ4", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+	
+	//Objectives
+	de3: OBJECTIVE,EXPR="fabs(statVariableAt('dE',19.4))";
+	rmss3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',19.4))";
+	rmsx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_x',19.4))";
+	rmsy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_y',19.4))";
+	rmspx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_px',19.4))";
+	rmspy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_py',19.4))";
+	
+	//Kicker apeture
+	c1: CONSTRAINT, EXPR="fabs(statVariableAt('rms_x',16.5))<0.1";
+	c2: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5))<0.1";
+	c3: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5)-statVariableAt('rms_x',16.5))<0.005";
+	
+	OPTIMIZE, INPUT="tmpl/optLinac-40nC.tmpl",
+	OUTPUT="optLinac-40nC",
+	OUTDIR="results",
+	OBJECTIVES = {rmss3, rmsx3, rmsy3, rmspx3, rmspy3, de3},
+	DVARS = {dv0, dv1, dv4, dv5, dv6, dv7},
+	CONSTRAINTS = {c1, c2, c3},
+	INITIALPOPULATION=656,
+	MAXGENERATIONS=200,
+	NUM_MASTERS=1,
+	NUM_COWORKERS=8,
+	SIMTMPDIR="tmp",
+	TEMPLATEDIR="tmpl",
+	FIELDMAPDIR="fieldmaps",
+	NUM_IND_GEN=328,
+	GENE_MUTATION_PROBABILITY=0.01,
+	MUTATION_PROBABILITY=0.01,
+	RECOMBINATION_PROBABILITY=0.09;
+	QUIT;
+	
+	\end{verbatim}}
+\vspace{0.2cm}
+
+Design variables include the currents in two gun solenoids (IBF and IM), 
+and four quadrupole strengths (KQ1-KQ2). The objectives include
+beam size (transverse and longitudinal), transverse momentum, and energy spread as
+defined in Eqs. (\ref{eq:awa:p1}) to (\ref{eq:awa:p4}). 
+The location at the entrance of the kicker is $s_0=16.45$~meters, 
+and the location of interest for objectives is $s_1=19.4$~meters. 
 
 
 \subsubsection{AWA Optimization Results}
+All simulations for this experiment were carried out on Bebop a
+high performance computing (HPC)
+cluster provided by the Laboratory Computing Resource Center (LCRC)
+at Argonne National Laboratory (ANL). We used Intel Knights Landing 
+(KNL) processors at 1.3 GHz with 128 GB of memory 
+and 64 cores per node. There are 352 compute nodes available on 
+Bebop, with a total of 22,528 cores. All jobs were run and compared 
+on 8 cores each, which allowed 8 jobs per node on the KNLs.
+This in combination with the number of nodes available 
+allows for very large optimization jobs, like the AWA case.
+Typical runs for this paper used 41 nodes, which corresponds to 2624 KNL cores 
+and a generation size of 328 individuals.
+
+
 With the time steps and hyper parameters set by the work in \ref{awa:subsection:test}, 
 the full optimization problem described in \ref{awaproblem} was run for 200 generations.
 The initial number of individuals was fixed at 656, 
