--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -27,6 +27,7 @@ aps,
 \usepackage{pifont}% http://ctan.org/pkg/pifont
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
+\usepackage{fancyvrb}
 \usepackage{booktabs}
 %\usepackage{cite}
 \usepackage{amsmath}
@@ -661,10 +662,10 @@ By providing an extra input file parser, optimization problems can be read
 To allow arbitrary constraints and objective expressions, such as
 %
 \vspace{0.2cm}
-{\footnotesize \begin{verbatim}
+\begin{Verbatim}[fontsize=\scriptsize]
   name: OBJECTIVE,
         EXPR="5 * average(42.0, "measurement.dat") + ENERGY";
-\end{verbatim}}
+\end{Verbatim}
 \vspace{0.2cm}
 %
 \noindent
@@ -812,25 +813,27 @@ Using the default expression primitives this can be stated in an input file
   as:
 
 \vspace{0.2cm}
-{\footnotesize \begin{verbatim}
-  d1: DVAR, VARIABLE="x1", LOWERBOUND="-1.0", UPPERBOUND="1.0";
-  d2: DVAR, VARIABLE="x2", LOWERBOUND="-1.0", UPPERBOUND="1.0";
-  d3: DVAR, VARIABLE="x3", LOWERBOUND="-1.0", UPPERBOUND="1.0";
+\begin{flushleft}
+\noindent
+\begin{Verbatim}[fontsize=\scriptsize]
+d1: DVAR, VARIABLE="x1", LOWERBOUND="-1.0", UPPERBOUND="1.0";
+d2: DVAR, VARIABLE="x2", LOWERBOUND="-1.0", UPPERBOUND="1.0";
+d3: DVAR, VARIABLE="x3", LOWERBOUND="-1.0", UPPERBOUND="1.0";
 
-  obj1: OBJECTIVE,
-    EXPR="1- exp(-1 * (sq(x1 - 1/sqrt(3)) 
-    + sq(x2 - 1/sqrt(3)) 
-    + sq(x3 - 1/sqrt(3))))";
-  obj2: OBJECTIVE,
-    EXPR="1- exp(-1 * (sq(x1 + 1/sqrt(3)) 
-    + sq(x2 + 1/sqrt(3)) 
-    + sq(x3 + 1/sqrt(3))))";
+obj1: OBJECTIVE,
+EXPR="1- exp(-1 * (sq(x1 - 1/sqrt(3)) 
++ sq(x2 - 1/sqrt(3)) + sq(x3 - 1/sqrt(3))))";
+obj2: OBJECTIVE,
+EXPR="1- exp(-1 * (sq(x1 + 1/sqrt(3)) 
++ sq(x2 + 1/sqrt(3)) + sq(x3 + 1/sqrt(3))))";
 
-  objs:    OBJECTIVES = (obj1, obj2);
-  dvars:   DVARS = (d1, d2, d3);
-  constrs: CONSTRAINTS = ();
-  opt: OPTIMIZE, OBJECTIVES=objs, DVARS=dvars, CONSTRAINTS=constrs;
-\end{verbatim}}
+objs:    OBJECTIVES = (obj1, obj2);
+dvars:   DVARS = (d1, d2, d3);
+constrs: CONSTRAINTS = ();
+opt: OPTIMIZE, OBJECTIVES=objs, DVARS=dvars, CONSTRAINTS=constrs;
+\end{Verbatim}
+\end{flushleft}
+
 \vspace{0.2cm}
 
 
