--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -142,7 +142,6 @@ The custom \texttt{fromFile} functor allows us to access the values stored in
 %
 %\vspace{0.2cm}
 \begin{flushleft}
-\noindent
 \begin{Verbatim}[fontsize=\scriptsize]
 rmsx:  OBJECTIVE, EXPR="statVariableAt("rms_x-err.dat", "var")";
 emitx: OBJECTIVE, EXPR="statVariableAt("emit_x-err.dat", "var")";
@@ -157,7 +156,6 @@ The design variables and the assembly of the multi-objective optimization proble
   can be included in the \textsc{OPAL}~input file as shown below:
 %\vspace{0.2cm}
 \begin{flushleft}
-\noindent
 \begin{Verbatim}[fontsize=\scriptsize]
 d1: DVAR, VARIABLE="SIGX", LOWERBOUND="0.00025", UPPERBOUND="0.00029";
 d2: DVAR, VARIABLE="FIND1_MSOL10_i", LOWERBOUND="110", UPPERBOUND="120";
@@ -621,28 +619,28 @@ The objectives include: $\varepsilon_{x}\left(s = s_1\right)\text{, } \varepsilo
 The optimization parameters specific to OPAL input for ex-3 are given as an example.
 Note the design variables defined in Section \ref{awaproblem}
 precede the optimization parameters in the OPAL input file.
-
+%
 \vspace{0.2cm}
-{\footnotesize \begin{verbatim}
-	OPTIMIZE, INPUT="tmpl/optLinac_40nC.tmpl",
-	OUTPUT="optLinac_40nC",
-	OUTDIR="results",
-	OBJECTIVES = {rmss1, rmsx1, emitx1, de1, rmss2, rmsx2, emitx2},
-	DVARS = {dv0, dv1, dv2, dv3, dv4, dv5, dv6, dv7},
-	CONSTRAINTS = {c1, c2},
-	INITIALPOPULATION=656,
-	MAXGENERATIONS=200,
-	NUM_MASTERS=1,
-	NUM_COWORKERS=8,
-	SIMTMPDIR="tmp",
-	TEMPLATEDIR="tmpl",
-	FIELDMAPDIR="fieldmaps",
-	NUM_IND_GEN=328,
-	GENE_MUTATION_PROBABILITY=0.8,
-	MUTATION_PROBABILITY=0.8,
-	RECOMBINATION_PROBABILITY=0.2;
-	QUIT;
-	\end{verbatim}}
+\begin{Verbatim}[fontsize=\scriptsize]
+OPTIMIZE, INPUT="tmpl/optLinac_40nC.tmpl",
+OUTPUT="optLinac_40nC",
+OUTDIR="results",
+OBJECTIVES = {rmss1, rmsx1, emitx1, de1, rmss2, rmsx2, emitx2},
+DVARS = {dv0, dv1, dv2, dv3, dv4, dv5, dv6, dv7},
+CONSTRAINTS = {c1, c2},
+INITIALPOPULATION=656,
+MAXGENERATIONS=200,
+NUM_MASTERS=1,
+NUM_COWORKERS=8,
+SIMTMPDIR="tmp",
+TEMPLATEDIR="tmpl",
+FIELDMAPDIR="fieldmaps",
+NUM_IND_GEN=328,
+GENE_MUTATION_PROBABILITY=0.8,
+MUTATION_PROBABILITY=0.8,
+RECOMBINATION_PROBABILITY=0.2;
+QUIT;
+\end{Verbatim}
 \vspace{0.2cm}
 
 After collection of the data for all four experiments, several metrics
@@ -747,53 +745,52 @@ that must be defined, but do not vary during the optimization.
 As introduced in Section \ref{ferrario}, we define the AWA optimization 
 design variables, objectives, and constraints in the OPAL input file as shown in
 the following code: %equations (\ref{eq:awa:p1}) to (\ref{eq:awa:lastdvar}). 
+%\vspace{0.2cm}
+\begin{Verbatim}[fontsize=\scriptsize]
 
-\vspace{0.2cm}
-{\footnotesize \begin{verbatim}
-	
-	// Gun variables 
-	dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=300.0, UPPERBOUND=500.0;
-	dv1: DVAR, VARIABLE="IM",     LOWERBOUND=180.0, UPPERBOUND=280.0;
-	
-	// Quad variables 
-	dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv5: DVAR, VARIABLE="KQ2", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv6: DVAR, VARIABLE="KQ3", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	dv7: DVAR, VARIABLE="KQ4", LOWERBOUND=-8.0, UPPERBOUND=8.0;
-	
-	//Objectives
-	de3: OBJECTIVE,EXPR="fabs(statVariableAt('dE',19.4))";
-	rmss3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',19.4))";
-	rmsx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_x',19.4))";
-	rmsy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_y',19.4))";
-	rmspx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_px',19.4))";
-	rmspy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_py',19.4))";
-	
-	//Kicker apeture
-	c1: CONSTRAINT, EXPR="fabs(statVariableAt('rms_x',16.5))<0.1";
-	c2: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5))<0.1";
-	c3: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5)-statVariableAt('rms_x',16.5))<0.005";
-	
-	OPTIMIZE, INPUT="tmpl/optLinac-40nC.tmpl",
-	OUTPUT="optLinac-40nC",
-	OUTDIR="results",
-	OBJECTIVES = {rmss3, rmsx3, rmsy3, rmspx3, rmspy3, de3},
-	DVARS = {dv0, dv1, dv4, dv5, dv6, dv7},
-	CONSTRAINTS = {c1, c2, c3},
-	INITIALPOPULATION=656,
-	MAXGENERATIONS=200,
-	NUM_MASTERS=1,
-	NUM_COWORKERS=8,
-	SIMTMPDIR="tmp",
-	TEMPLATEDIR="tmpl",
-	FIELDMAPDIR="fieldmaps",
-	NUM_IND_GEN=328,
-	GENE_MUTATION_PROBABILITY=0.01,
-	MUTATION_PROBABILITY=0.01,
-	RECOMBINATION_PROBABILITY=0.09;
-	QUIT;
-	
-	\end{verbatim}}
+// Gun variables 
+dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=300.0, UPPERBOUND=500.0;
+dv1: DVAR, VARIABLE="IM",     LOWERBOUND=180.0, UPPERBOUND=280.0;
+
+// Quad variables 
+dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+dv5: DVAR, VARIABLE="KQ2", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+dv6: DVAR, VARIABLE="KQ3", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+dv7: DVAR, VARIABLE="KQ4", LOWERBOUND=-8.0, UPPERBOUND=8.0;
+
+//Objectives
+de3: OBJECTIVE,EXPR="fabs(statVariableAt('dE',19.4))";
+rmss3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_s',19.4))";
+rmsx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_x',19.4))";
+rmsy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_y',19.4))";
+rmspx3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_px',19.4))";
+rmspy3: OBJECTIVE,EXPR="fabs(statVariableAt('rms_py',19.4))";
+
+//Kicker apeture
+c1: CONSTRAINT, EXPR="fabs(statVariableAt('rms_x',16.5))<0.1";
+c2: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5))<0.1";
+c3: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5)
+			-statVariableAt('rms_x',16.5))<0.005";
+
+OPTIMIZE, INPUT="tmpl/optLinac-40nC.tmpl",
+OUTPUT="optLinac-40nC",
+OUTDIR="results",
+OBJECTIVES = {rmss3, rmsx3, rmsy3, rmspx3, rmspy3, de3},
+DVARS = {dv0, dv1, dv4, dv5, dv6, dv7},
+CONSTRAINTS = {c1, c2, c3},
+INITIALPOPULATION=656,
+MAXGENERATIONS=200,
+NUM_MASTERS=1,
+NUM_COWORKERS=8,
+SIMTMPDIR="tmp",
+TEMPLATEDIR="tmpl",
+FIELDMAPDIR="fieldmaps",
+NUM_IND_GEN=328,
+GENE_MUTATION_PROBABILITY=0.01,
+MUTATION_PROBABILITY=0.01,
+RECOMBINATION_PROBABILITY=0.09;
+QUIT;
+\end{Verbatim}
 \vspace{0.2cm}
 
 Design variables include the currents in two gun solenoids (IBF and IM), 
